Documentación teórica ARIMA

--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -659,12 +659,12 @@ journal = {Neural Comput.},
   	note = {Online; Accedido el 17-May-2024},
 }
 
-@misc{ wiki:estacionalidad,
+@misc{ wiki:proceso_estacionario,
   	author = {Wikipedia},
-  	title = {\emph{Estacionalidad}},
+  	title = {\emph{Proceso estacionario}},
   	year = {2024},
-  	howpublished = {\url{https://es.wikipedia.org/wiki/Estacionalidad}},
-  	note = {Online; Accedido el 18-May-2024},
+  	howpublished = {\url{https://es.wikipedia.org/wiki/Proceso_estacionario}},
+  	note = {Online; Accedido el 19-May-2024},
 }
 
 @misc{ wiki:paseo_aleatorio,
@@ -673,4 +673,20 @@ journal = {Neural Comput.},
   	year = {2024},
   	howpublished = {\url{https://es.wikipedia.org/wiki/Camino_aleatorio}},
   	note = {Online; Accedido el 18-May-2024},
+}
+
+@misc{ wiki:Dickey-Fuller,
+  	author = {Wikipedia},
+  	title = {\emph{Prueba de Dickey-Fuller aumentada}},
+  	year = {2024},
+  	howpublished = {\url{https://es.wikipedia.org/wiki/Prueba_de_Dickey-Fuller_aumentada}},
+  	note = {Online; Accedido el 18-May-2024},
+}
+
+@misc{ wiki:proceso_estacionario_en,
+  	author = {Wikipedia},
+  	title = {\emph{Stationary process}},
+  	year = {2024},
+  	howpublished = {\url{https://en.wikipedia.org/wiki/Stationary_process}},
+  	note = {Online; Accedido el 19-May-2024},
 }
