Documentación ARIMA completa y mejoras en presentación de información

--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -690,3 +690,11 @@ journal = {Neural Comput.},
   	howpublished = {\url{https://en.wikipedia.org/wiki/Stationary_process}},
   	note = {Online; Accedido el 19-May-2024},
 }
+
+@misc{ online:walk_forward,
+  	author = {Marti Castany},
+  	title = {\emph{El método walk-forward: la guía definitiva}},
+  	year = {2023},
+  	howpublished = {\url{https://quantdemy.com/metodo-walk-forward/}},
+  	note = {Online; Accedido el 23-May-2024},
+}
